--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf/renderer": "^4.1.5",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "echarts-for-react": "^3.0.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -29,6 +30,7 @@
     "react-qr-barcode-scanner": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.0",
     "yup": "^1.4.0"
   },
