many new updates

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_API_RUL=http://localhost:3000/api/v1
+VITE_API_URL=http://localhost:3000/api/v1
+VITE_SERVER_URL=http://localhost:3000
 VITE_CART_SECRET_KEY=mody-store-r8_ragab-cart_s-key
 VITE_FAVS_SECRET_KEY=mody-store-r8_ragab-favorites_s-key
