--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.4",
     "echarts-for-react": "^3.0.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
