--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-qr-barcode-scanner": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
+    "react-spinners": "^0.15.0",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.0",
     "yup": "^1.4.0"
