--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.11.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
