--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.1.5",
     "@tailwindcss/vite": "^4.0.0",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.4",
@@ -35,6 +36,7 @@
     "react-spinners": "^0.15.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0",
+    "tsparticles": "^3.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
