--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "quill": "^2.0.3",
+    "rc-slider": "^11.1.8",
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
