--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-qr-barcode-scanner": "^2.0.0",
