--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
-    "echarts-for-react": "^3.0.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.11.6",
@@ -32,11 +32,10 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-qr-barcode-scanner": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
-    "swiper": "^11.2.5",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.0",
     "tsparticles": "^3.8.1",
     "yup": "^1.4.0"
